# wearu

./: .env  README.md  docker-compose.yaml  optimize_models.py  pyproject.toml
wearu/backend-service/: Dockerfile  service.py
wearu/image-inference-service/: Dockerfile  service.py
wearu/text-inference-service/: Dockerfile  service.py
